fixes the cors error